Removed styling from button element
The button element flashed the default styling for a moment. CSS rules have been added to address this.

Signed-off-by: John Morton <john@johnfmorton.com>

--- a/generators/app/templates/dev/_index_standard.html
+++ b/generators/app/templates/dev/_index_standard.html
@@ -8,9 +8,14 @@
     #container_ad {
         z-index: 20
     }
+    button {
+        background: none;
+        outline: 0;
+        border: 0;
+     }
     </style>
     <script type="text/javascript">
-      var clickTag = "http://www.amazon.com/kind ";
+      var clickTag = "http://example.com";
     </script>
     <script language="javascript">
 
