--- a/generators/app/templates/dev/_index_dc.html
+++ b/generators/app/templates/dev/_index_dc.html
@@ -19,6 +19,11 @@
         display: none;
         z-index: 20;
     }
+    button {
+        background: none;
+        outline: 0;
+        border: 0;
+     }
     </style>
     <script language="javascript">
     // Initialize Enabler - DoubleClick referrs to this as the most
@@ -120,6 +125,9 @@
     <div id="container_ad">
         <div id="content_ad">
             <!-- Your banner ad content goes here -->
+            <div id="hd1">Headline One</div>
+            <div id="hd2">More words here.</div>
+            <div id="hd3">Yet more words.</div>
         </div>
         <button id="background_exit_ad"></button>
     </div>
