Added backup image for standard banners
Signed-off-by: John Morton <john@johnfmorton.com>

--- a/generators/app/templates/dev/_index_standard.html
+++ b/generators/app/templates/dev/_index_standard.html
@@ -139,6 +139,10 @@
          window.open(window.clickTag);
          }
     </script>
+    <noscript>
+	<!-- You must create a backup image and include it here for users without JS -->
+	<a href="http://example"><img src="backupimage.jpg" width="<%= actualBannerWidth %>" height="<%= actualBannerHeight %>"></a>
+    </noscript>
 </body>
 
 </html>
