More descriptive comment tag
Signed-off-by: John Morton <john@johnfmorton.com>

--- a/generators/app/templates/dev/_index_standard.html
+++ b/generators/app/templates/dev/_index_standard.html
@@ -1,4 +1,4 @@
-<!-- HTML 5 Ad Template from DoubleClick by Google // modified to remove DCS specific code -->
+<!-- HTML 5 Ad Template from DoubleClick by Google // modified to remove DCS specific code for use as a standard banner -->
 <!DOCTYPE html>
 <html lang="en">
 
