Updated example to example.com in backup image URL
Signed-off-by: John Morton <john@johnfmorton.com>

--- a/generators/app/templates/dev/_index_standard.html
+++ b/generators/app/templates/dev/_index_standard.html
@@ -108,7 +108,7 @@
     </script>
     <noscript>
         <!-- You must create a backup image and include it here for users without JS -->
-        <a href="http://example"><img src="backupimage.jpg" width="<%= actualBannerWidth %>" height="<%= actualBannerHeight %>"></a>
+        <a href="http://example.com"><img src="backupimage.jpg" width="<%= actualBannerWidth %>" height="<%= actualBannerHeight %>"></a>
     </noscript>
 </body>
 
