Updated Standard template w req meta tag size info

--- a/generators/app/templates/dev/_index_standard.html
+++ b/generators/app/templates/dev/_index_standard.html
@@ -3,6 +3,8 @@
 <html lang="en">
 
 <head>
+    <title><%= bannerName %></title>
+    <meta name="ad.size" content="height=<%= actualBannerHeight %>,width=<%= actualBannerWidth %>">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
     #container_ad {
@@ -106,10 +108,11 @@
          window.open(window.clickTag);
          }
     </script>
-    <noscript>
-        <!-- You must create a backup image and include it here for users without JS -->
+    <!-- Remove the comment tags around the noscript area below if you would like to include a backup image within your banner build. This isn't typically done, but we've seen it requested by some clients. Doing a back up image this way impacts the K size of your banner build. Instead of doing backups this way, the are typically delivered as a separate standand-alone image. -->
+    <!-- You must create a backup image and include it here for users without JS -->
+    <!-- <noscript>
         <a href="http://example.com"><img src="backupimage.jpg" width="<%= actualBannerWidth %>" height="<%= actualBannerHeight %>"></a>
-    </noscript>
+    </noscript> -->
 </body>
 
 </html>
