Google AdWords refused Ad with meta tag ad dimensions not ordered like in their specs.

--- a/generators/app/templates/dev/_index_standard.html
+++ b/generators/app/templates/dev/_index_standard.html
@@ -4,7 +4,7 @@
 
 <head>
     <title><%= bannerName %></title>
-    <meta name="ad.size" content="height=<%= actualBannerHeight %>,width=<%= actualBannerWidth %>">
+    <meta name="ad.size" content="width=<%= actualBannerWidth %>,height=<%= actualBannerHeight %>">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
     #container_ad {
