--- a/generators/app/templates/dev/_index_dc.html
+++ b/generators/app/templates/dev/_index_dc.html
@@ -5,7 +5,7 @@
 <head>
     <!-- Studio Enabler Required -->
     <!-- this was updated to work on http or https by removing the protocal entirely -->
-    <script src="//s0.2mdn.net/ads/studio/Enabler.js" type="text/javascript"></script>
+    <script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
 
    <!--
     For offline use;
