--- a/generators/app/templates/dev/_index_trueffect.html
+++ b/generators/app/templates/dev/_index_trueffect.html
@@ -62,18 +62,14 @@
         // Now that the ad is actual in a visible area, let's start this party.
 
         /*
-        http://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/plugins/CSSPlugin.min.js
-        http://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TimelineLite.min.js
-
-        http://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/easing/EasePack.min.js
-        http://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenLite.min.js
+        http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/plugins/CSSPlugin.min.js
+        http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TimelineLite.min.js
+        http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/easing/EasePack.min.js
+        http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenLite.min.js
         */
 
         //now you can just feed stuff into that one function and give it a callback...
-        _politeLoad(['//cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenLite.min.js',
-            '//cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TimelineLite.min.js',
-            '//cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/plugins/CSSPlugin.min.js',
-            '//cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/easing/EasePack.min.js',
+        _politeLoad(['//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js',
             'script.js'
         ], function() {
             console.log('ready');
