--- a/generators/app/templates/dev/_style.scss
+++ b/generators/app/templates/dev/_style.scss
@@ -48,6 +48,12 @@ body, body * {
     // -webkit-backface-visibility: hidden;
     // -moz-backface-visibility: hidden;
     // -ms-backface-visibility: hidden;
+    // 
+    // Alternately, you might find the 'will-change'
+    // proptery useful instead. See this link for more info:
+    // https://dev.opera.com/articles/css-will-change-property/
+    // 
+    // will-change: transform, opacity;
 }
 
 #content_ad {
@@ -59,10 +65,11 @@ body, body * {
 	z-index: 100;
 	background: $bannerBackColor; // url(background.jpg);
     // If you put a single sprite sheet into all of your
-    // div tags, you can effeciently put set the background 
-    // image of all child dives this this rule below
+    // div tags, you can effeciently set the background 
+    // image of all child divs with this rule below.
     // You will need to set the background position,
-    // width and height on the individual divs though
+    // width and height on the individual divs.
+    // 
     // div {
     //     opacity: 0;
     //     position: absolute;
