Updated JS file versions for inclusion in banners
Signed-off-by: John Morton <john@johnfmorton.com>

--- a/generators/app/templates/dev/_index_standard.html
+++ b/generators/app/templates/dev/_index_standard.html
@@ -77,12 +77,12 @@
         https://support.google.com/richmedia/answer/6307288?hl=en
 
         PreloadJS from the CreateJS is a common one we use:
-        https://s0.2mdn.net/ads/studio/cached_libs/preloadjs_0.6.1_ab03d7dc94f6d4fae428f99662cd5819_min.js
+        https://s0.2mdn.net/ads/studio/cached_libs/preloadjs_0.6.2_d7b96570d4552592ae479162e546cb25_min.js
 
         */
 
         //now you can just feed stuff into that one function and give it a callback...
-        _politeLoad(['//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js',
+        _politeLoad(['https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js',
             'script.js'
         ], function() {
             console.log('ready');
