--- a/generators/app/templates/dev/_index_dc.html
+++ b/generators/app/templates/dev/_index_dc.html
@@ -100,13 +100,12 @@
         https://support.google.com/richmedia/answer/6307288?hl=en
 
         PreloadJS from the CreateJS is a common one we use:
-        https://s0.2mdn.net/ads/studio/cached_libs/preloadjs_0.6.1_ab03d7dc94f6d4fae428f99662cd5819_min.js
-
+        https://s0.2mdn.net/ads/studio/cached_libs/preloadjs_0.6.2_d7b96570d4552592ae479162e546cb25_min.js
         */
 
         // we'll feed these into the _politeLoad helper function
         // and give it a callback, bannerInit which lives in the script.js file
-        _politeLoad(['//s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.18.0_499ba64a23378545748ff12d372e59e9_min.js',
+        _politeLoad(['https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.18.0_499ba64a23378545748ff12d372e59e9_min.js',
             'script.js'
         ], function() {
             console.log('Banner is ready to be initialized.');
