--- a/generators/app/templates/dev/_index_trueffect.html
+++ b/generators/app/templates/dev/_index_trueffect.html
@@ -63,13 +63,25 @@
 
         /*
         http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/plugins/CSSPlugin.min.js
+        You can import files anyway you want, like from the Greensock CDN
+        http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/plugins/CSSPlugin.min.js
         http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TimelineLite.min.js
         http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/easing/EasePack.min.js
         http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenLite.min.js
+
+        Google now hosts a copy of TweenMax, so we now use that instead.
+        https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.18.0_499ba64a23378545748ff12d372e59e9_min.js
+
+        What are the other Google hosted libraries? See here:
+        https://support.google.com/richmedia/answer/6307288?hl=en
+
+        PreloadJS from the CreateJS is a common one we use:
+        https://s0.2mdn.net/ads/studio/cached_libs/preloadjs_0.6.2_d7b96570d4552592ae479162e546cb25_min.js
+
         */
 
         //now you can just feed stuff into that one function and give it a callback...
-        _politeLoad(['//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js',
+        _politeLoad(['https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js',
             'script.js'
         ], function() {
             console.log('ready');
