Added metadata ad.size to DC unit
This isn't needed by DC, but i've been added because it is an unofficial standard in banner development. It is also useful for the new `gulp check` command in BAB.

Signed-off-by: John Morton <john@johnfmorton.com>

--- a/generators/app/templates/dev/_index_dc.html
+++ b/generators/app/templates/dev/_index_dc.html
@@ -3,6 +3,9 @@
 <html lang="en">
 
 <head>
+    <title><%= bannerName %></title>
+    <!-- ad.size is not required for DoubleClick Rich media ads but is included because it is an unofficial standard -->
+    <meta name="ad.size" content="width=<%= actualBannerWidth %>,height=<%= actualBannerHeight %>">
     <!-- Studio Enabler Required -->
     <!-- this was updated to work on http or https by removing the protocal entirely -->
 
