Removed EBLoader.js refs for adkit.js for Sizmek
- Sizmek spelling corrected from "Sizemek"
- Previously EBLoader.js was loaded from a local copy of EBLoader.js in the dev folder. This is not supported at Sizmek anymore in favor of loading the "adkit.js" from their servers.

--- a/generators/app/templates/dev/_index_sizmek.html
+++ b/generators/app/templates/dev/_index_sizmek.html
@@ -16,8 +16,8 @@
         border: 0;
      }
     </style>
-    <script src="EBLoader.js"></script>
-    <!-- There is no click thru URL in this file. It will handled in the Sizemek environment via the EBLoader file above and the EB.clickthrough() at the bottom of this HTML docuement -->
+    <script type="text/javascript" src="https://secure-ds.serving-sys.com/BurstingScript/adKit/adkit.js"></script>
+    <!-- There is no click thru URL in this file. It will handled in the Sizmek environment via the adkit.js file above and the EB.clickthrough() at the bottom of this HTML docuement -->
     
     <script language="javascript">
 
