--- a/generators/app/templates/dev/_index_adwords.html
+++ b/generators/app/templates/dev/_index_adwords.html
@@ -16,6 +16,7 @@
         border: 0;
      }
     </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Import the AdWords specific Exit API library
         See: https://support.google.com/adwordspolicy/answer/176108#html5_ads_table
         Search for "Using an exit URL" on this page.
@@ -89,15 +90,6 @@
             console.log('ready');
             bannerInit();
         });
-
-        //Load in CSS
-        var extCSS = document.createElement('link');
-        extCSS.setAttribute("rel", "stylesheet");
-        extCSS.setAttribute("type", "text/css");
-        extCSS.setAttribute("href", "style.css");
-        document.getElementsByTagName("head")[0].appendChild(extCSS);
-        document.getElementById("container_ad").style.opacity = 1;
-        document.getElementById("container_ad").style.display = "block";
     }
     </script>
 </head>
