--- a/generators/app/templates/dev/_index_trueffect.html
+++ b/generators/app/templates/dev/_index_trueffect.html
@@ -16,6 +16,7 @@
         border: 0;
      }
     </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- This is the TruEffect clickThru javascript -->
     <script type="text/javascript" src="https://ad.adlegend.com/cdn/trueffect/te_html.min.js"></script>
 
@@ -87,15 +88,6 @@
             console.log('ready');
             bannerInit();
         });
-
-        //Load in CSS
-        var extCSS = document.createElement('link');
-        extCSS.setAttribute("rel", "stylesheet");
-        extCSS.setAttribute("type", "text/css");
-        extCSS.setAttribute("href", "style.css");
-        document.getElementsByTagName("head")[0].appendChild(extCSS);
-        document.getElementById("container_ad").style.opacity = 1;
-        document.getElementById("container_ad").style.display = "block";
     }
     </script>
 </head>
