Updated aniamtion libraries

--- a/generators/app/templates/dev/_index_adwords.html
+++ b/generators/app/templates/dev/_index_adwords.html
@@ -67,13 +67,13 @@
         /*
 
         You can import files anyway you want, like from the Greensock CDN
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TimelineLite.min.js
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/easing/EasePack.min.js
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/CSSPlugin.min.js
+		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenLite.min.js
+		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TimelineLite.min.js
+		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/easing/EasePack.min.js
+		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/plugins/CSSPlugin.min.js
 
-        Google now hosts a copy of TweenMax, so we now use that instead.
-        https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js
+        Google hosts a copy of TweenMax, so we now use that instead.
+        https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.20.0_d360d9a082ccc13b1a1a9b153f86b378_min.js
 
         What are the other Google hosted libraries? See here:
         https://support.google.com/richmedia/answer/6307288?hl=en
@@ -84,7 +84,7 @@
         */
 
         //now you can just feed stuff into that one function and give it a callback...
-        _politeLoad(['https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js',
+        _politeLoad(['https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.20.0_d360d9a082ccc13b1a1a9b153f86b378_min.js',
             'script.js'
         ], function() {
             console.log('ready');
