--- a/generators/app/templates/dev/_index_dc.html
+++ b/generators/app/templates/dev/_index_dc.html
@@ -92,13 +92,13 @@
         /*
 
         You can import files anyway you want, like from the Greensock CDN
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TimelineLite.min.js
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/easing/EasePack.min.js
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/CSSPlugin.min.js
+		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenLite.min.js
+		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TimelineLite.min.js
+		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/easing/EasePack.min.js
+		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/plugins/CSSPlugin.min.js
 
-        Google now hosts a copy of TweenMax, so we now use that instead.
-        https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js
+        Google now hosts a copy of TweenMax. We use it only on Google served ads though.
+        https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.20.0_d360d9a082ccc13b1a1a9b153f86b378_min.js
 
         What are the other Google hosted libraries? See here:
         https://support.google.com/richmedia/answer/6307288?hl=en
@@ -109,7 +109,7 @@
 
         // we'll feed these into the _politeLoad helper function
         // and give it a callback, bannerInit which lives in the script.js file
-        _politeLoad(['https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js',
+        _politeLoad(['https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.20.0_d360d9a082ccc13b1a1a9b153f86b378_min.js',
             'script.js'
         ], function() {
             console.log('Banner is ready to be initialized.');
