--- a/generators/app/templates/dev/_index_dc.html
+++ b/generators/app/templates/dev/_index_dc.html
@@ -92,24 +92,36 @@
         /*
 
         You can import files anyway you want, like from the Greensock CDN
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenLite.min.js
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TimelineLite.min.js
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/easing/EasePack.min.js
-		https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/plugins/CSSPlugin.min.js
+        See https://greensock.com/2-0-0 for all the options
+        
+        TweenMax has everything:
+        https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js
+        
+        Or pick and choose what you need:
+        https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenLite.min.js
+        https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TimelineLite.min.js
+        https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/CSSPlugin.min.js
+        https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TimelineMax.min.js
+        https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/easing/EasePack.min.js
 
-        Google now hosts a copy of TweenMax. We use it only on Google served ads though.
-        https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.20.0_d360d9a082ccc13b1a1a9b153f86b378_min.js
+        Google hosts a copy of TweenMax. We use it only on Google served ads though. It's an older version than available on Cloudflare
+        https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.20.4_3dc5474a75410cb768741e402b80d908_min.js
 
         What are the other Google hosted libraries? See here:
         https://support.google.com/richmedia/answer/6307288?hl=en
 
         PreloadJS from the CreateJS is a common one we use:
         https://s0.2mdn.net/ads/studio/cached_libs/preloadjs_0.6.2_d7b96570d4552592ae479162e546cb25_min.js
+
+        If you're working on a HTML canvas ad, you will probably want the Easel JS library too.
+        https://s0.2mdn.net/ads/studio/cached_libs/easeljs_0.8.2_937c3ec68021211c056f61c9ceaccffd_min.js
         */
 
         // we'll feed these into the _politeLoad helper function
         // and give it a callback, bannerInit which lives in the script.js file
-        _politeLoad(['https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.20.0_d360d9a082ccc13b1a1a9b153f86b378_min.js',
+        _politeLoad([
+            'https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.20.4_3dc5474a75410cb768741e402b80d908_min.js',
+            // 'https://s0.2mdn.net/ads/studio/cached_libs/easeljs_0.8.2_937c3ec68021211c056f61c9ceaccffd_min.js',
             'script.js'
         ], function() {
             console.log('Banner is ready to be initialized.');
