--- a/generators/app/templates/dev/_index_sizmek.html
+++ b/generators/app/templates/dev/_index_sizmek.html
@@ -77,7 +77,7 @@
         https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TimelineMax.min.js
         https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/easing/EasePack.min.js
 
-        Google now hosts a copy of TweenMax. We use it only on Google served ads though. It's an older version than available on Cloudflare
+        Google hosts a copy of TweenMax. We use it only on Google served ads though. It's an older version than available on Cloudflare
         https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.20.4_3dc5474a75410cb768741e402b80d908_min.js
 
         What are the other Google hosted libraries? See here:
@@ -96,7 +96,8 @@
 
         //now you can just feed stuff into that one function and give it a callback...
         _politeLoad([
-            //'https://code.createjs.com/1.0.0/preloadjs.min.js',
+            // 'https://code.createjs.com/1.0.0/preloadjs.min.js',
+            // 'https://s0.2mdn.net/ads/studio/cached_libs/easeljs_0.8.2_937c3ec68021211c056f61c9ceaccffd_min.js',
             'https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js',
             'script.js'
         ], function() {
