Better sample default banner

--- a/generators/app/templates/dev/_index_dc.html
+++ b/generators/app/templates/dev/_index_dc.html
@@ -141,9 +141,7 @@
     <div id="container_ad">
         <div id="content_ad">
             <!-- Your banner ad content goes here -->
-            <div id="hd1">Headline One</div>
-            <div id="hd2">More words here.</div>
-            <div id="hd3">Yet more words.</div>
+            <div id="remove-me">Build A Banner</div>
         </div>
         <button id="background_exit_ad"></button>
     </div>
